@@ -137,6 +137,9 @@ C-API
 Library
 -------
 
+- Issue #2054: ftplib now provides an FTP_TLS class to do secure FTP using
+  TLS or SSL.  Patch by Giampaolo Rodola'.
+
 - Issue #7328: pydoc no longer corrupts sys.path when run with the '-m' switch
 
 - Issue #4969: The mimetypes module now reads the MIME database from
